# carmen

./: .gitignore  README.md  pyproject.toml
examples/: example_simple_usage.py
output/: simulation_ACCESS-ESM1-5_1pctco2_npp.nc  simulation_ACCESS-ESM1-5_ssp126_npp.nc  simulation_ACCESS-ESM1-5_ssp245_npp.nc  simulation_ACCESS-ESM1-5_ssp370_npp.nc  simulation_ACCESS-ESM1-5_ssp534-over_npp.nc  simulation_ACCESS-ESM1-5_ssp585_npp.nc  simulation_BCC-CSM2-MR_1pctco2_npp.nc  simulation_BCC-CSM2-MR_ssp126_npp.nc  simulation_BCC-CSM2-MR_ssp245_npp.nc  simulation_BCC-CSM2-MR_ssp370_npp.nc  simulation_BCC-CSM2-MR_ssp585_npp.nc  simulation_CESM2_1pctco2_npp.nc  simulation_CESM2_ssp126_npp.nc  simulation_CESM2_ssp245_npp.nc  simulation_CESM2_ssp370_npp.nc  simulation_CESM2_ssp585_npp.nc  simulation_CMCC-ESM2_1pctco2_npp.nc  simulation_CMCC-ESM2_ssp126_npp.nc  simulation_CMCC-ESM2_ssp245_npp.nc  simulation_CMCC-ESM2_ssp370_npp.nc  simulation_CMCC-ESM2_ssp534-over_npp.nc  simulation_CMCC-ESM2_ssp585_npp.nc  simulation_CNRM-ESM2-1_1pctco2_npp.nc  simulation_CNRM-ESM2-1_ssp119_npp.nc  simulation_CNRM-ESM2-1_ssp126_npp.nc  simulation_CNRM-ESM2-1_ssp245_npp.nc  simulation_CNRM-ESM2-1_ssp370_npp.nc  simulation_CNRM-ESM2-1_ssp434_npp.nc  simulation_CNRM-ESM2-1_ssp460_npp.nc  simulation_CNRM-ESM2-1_ssp534-over_npp.nc  simulation_CNRM-ESM2-1_ssp585_npp.nc  simulation_CanESM5_1pctco2_npp.nc  simulation_CanESM5_ssp119_npp.nc  simulation_CanESM5_ssp126_npp.nc  simulation_CanESM5_ssp245_npp.nc  simulation_CanESM5_ssp370_npp.nc  simulation_CanESM5_ssp434_npp.nc  simulation_CanESM5_ssp460_npp.nc  (+44 more)
(+518 files in other folders)
